<resources>
    <string name="app_name">CoursePlanner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logOut">Log Out</string>
    <string name="adminAddCourseSubmit">New Course Submit</string>
    <string name="adminAddCourse">Please fill the information about the new course</string>
    <string name="adminAddCourseName">Course Name</string>
    <string name="adminAddCourseCode">Course Code</string>
    <string name="adminAddOffering">Offering Session</string>
    <string name="adminAddPre">Prerequisite</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="studentToAddCourse">Add Completed Courses</string>
    <string name="studentToTakenCourseDisplay">Completed Courses</string>
    <string name="studentToGenerateTimeline">Generate Timeline</string>

    <string name="banner">Log in</string>
    <string name="banner_description">Log in page</string>
    <string name="adminCourseListDisplay">Course List Display</string>
    <string name="adminEditDisplay">Edit Display</string>
    <string name="adminActivityAddCourse">Add Course</string>
    <string name="Course_input">Course Code</string>
    <string name="Sumbit_button">Submit</string>
    <string name="Return_button">Previous</string>
    <string name="add_course_textview">Type to add courses</string>


    <!-- String used for log in and sign up pages -->
    <string name="loginTitle">Course Planner</string>
    <string name="loginDescription">Register</string>
    <string name="adminLogin">Log in as admin</string>
    <string name="signup">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">PassWord</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="i_am_an_admin">I am an admin</string>
    <string name="register_user">REGISTER USER</string>
    <string name="full_name">Full Name</string>
    <string name="add_course_button">Add</string>
    <string name="timeline_submit_button">Submit</string>
    <string name="timeline_add_button">Add</string>

</resources>