<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    android:id="@+id/textview_first"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->

    <!--    android:textColor="@android:color/white"-->


    <TextView
        android:id="@+id/adminAddCourseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/adminAddCourse"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/adminAddCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminAddCourseSubmit"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="498dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

<!--    app:layout_constraintBottom_toBottomOf="@+id/adminAddCourseTextView"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/textview_first"-->

    <EditText
        android:id="@+id/adminAddCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/adminAddCourseName"
        android:layout_marginStart="30dp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="188dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/adminAddCourseTextView" />

    <EditText
        android:id="@+id/adminAddCourseCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/adminAddCourseCode"
        app:layout_constraintTop_toBottomOf="@+id/adminAddCourseName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="86dp" />

    <EditText
        android:id="@+id/adminAddOffering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:ems="18"
        android:inputType="textPersonName"
        android:text="@string/adminAddOffering"
        app:layout_constraintTop_toBottomOf="@+id/adminAddCourseCode"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="86dp" />

    <EditText
        android:id="@+id/adminAddPre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:ems="18"
        android:inputType="textPersonName"
        android:text="@string/adminAddPre"
        app:layout_constraintTop_toBottomOf="@+id/adminAddOffering"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="86dp" />


</androidx.constraintlayout.widget.ConstraintLayout>